test/libsolidity/syntaxTests/pragma/broken_version_6.sol
pragma solidity v1.2.3;
// ----
// ParserError 1684: (0-23): Found version pragma, but failed to parse it. Please ensure there is a trailing semicolon.
